Implemented rookie draft

--- a/src/natc/resource/natc.properties
+++ b/src/natc/resource/natc.properties
@@ -82,6 +82,7 @@ team.label.division_champ=Division Champion
 team.label.conference_champ=Conference Champion
 team.label.natc_champ=NATC Champion
 team.label.games=Games
+team.label.time_per_game=Time/Game
 team.label.rookie=(R)
 team.label.history=History
 team.label.year=Year
@@ -91,6 +92,7 @@ team.label.platinum=(P)
 team.label.allstar=(A)
 
 player.label.name=Name
+player.label.team=Team
 player.label.history=History
 player.label.area=Area
 player.label.rating=Rating
@@ -101,6 +103,7 @@ player.label.tackling=Tackling
 player.label.stealing=Stealing
 player.label.presence=Presence
 player.label.discipline=Discipline
+player.label.endurance=Endurance
 player.label.penalty_shot=Penalty Shot
 player.label.penalty_offense=Penalty Offense
 player.label.penalty_defense=Penalty Defense
@@ -173,6 +176,7 @@ retired.label.retired=Retired Players
 retired.label.player=Player
 retired.label.age=Age
 retired.label.seasons=Seasons Played
+retired.label.rookies=Abandoned Rookies
 
 games.label.next=Next
 
