Reimplemented schedule generation

--- a/src/natc/resource/natc.properties
+++ b/src/natc/resource/natc.properties
@@ -22,6 +22,9 @@ games.option.year=Year
 games.option.next=Next
 
 games.label.ot_indicator=OT
+games.label.preseason=Preseason
+games.label.regseason=Regular Season
+games.label.postseason=Postseason
 
 team.label.area=Area
 team.label.rating=Rating
