Implemented team managers

--- a/src/natc/resource/natc.properties
+++ b/src/natc/resource/natc.properties
@@ -3,6 +3,7 @@ title.games=Games
 title.news=News
 title.players=Players
 title.player=Player
+title.manager=Manager
 title.stats=Stats
 title.teams=Teams
 title.team=Team
@@ -33,11 +34,13 @@ team.label.defense=Defense
 team.label.discipline=Discipline
 team.label.ps_offense=PS Offense
 team.label.ps_defense=PS Defense
+team.label.manager=Manager
 team.label.records=Records
 team.label.players=Players
 team.label.player=Player
 team.label.age=Age
 team.label.skill=Skill
+team.label.style=Style
 team.label.record=Record
 team.label.division=Division
 team.label.ooc=OOC
@@ -94,6 +97,27 @@ team.label.gold=(G)
 team.label.platinum=(P)
 team.label.allstar=(A)
 
+manager.label.area=Area
+manager.label.rating=Rating
+manager.label.offense=Offense
+manager.label.defense=Defense
+manager.label.intangible=Intangible
+manager.label.penalties=Penalties
+manager.label.style=Style
+manager.label.offensive=Offensive
+manager.label.defensive=Defensive
+manager.label.penalty=Penalty
+manager.label.balanced=Balanced
+manager.label.history=History
+manager.label.team=Team
+manager.label.year=Year
+manager.label.record=Record
+manager.label.finish=Finish
+manager.label.avg_top=Avg_Top
+manager.label.score=Score
+manager.label.eff=Efficiency
+manager.label.ps_eff=PS Eff.
+
 player.label.name=Name
 player.label.team=Team
 player.label.history=History
@@ -143,12 +167,19 @@ player.label.allstar_award=(A)
 awards.label.award=Award
 awards.label.player=Player
 awards.label.team=Team
+awards.label.manager=Manager
 awards.label.conference=Conference
 awards.label.division=Division
 awards.label.platinum=Platinum
 awards.label.gold=Gold
 awards.label.silver=Silver
 awards.label.rookie=(R)
+
+ofs.label.retired=Retired Managers
+ofs.label.fired=Fired Managers
+ofs.label.hired=Hired Managers
+ofs.label.manager=Manager
+ofs.label.team=Team
 
 draft.label.pick=Pick
 draft.label.player=Player
