Implemented player injuries

--- a/src/natc/resource/natc.properties
+++ b/src/natc/resource/natc.properties
@@ -26,6 +26,7 @@ games.label.ot_indicator=OT
 games.label.preseason=Preseason
 games.label.regseason=Regular Season
 games.label.postseason=Postseason
+games.label.injuries=Injuries
 
 team.label.area=Area
 team.label.rating=Rating
@@ -96,6 +97,7 @@ team.label.silver=(S)
 team.label.gold=(G)
 team.label.platinum=(P)
 team.label.allstar=(A)
+team.label.injured=(I)
 
 manager.label.area=Area
 manager.label.rating=Rating
@@ -163,6 +165,9 @@ player.label.silver=(S)
 player.label.gold=(G)
 player.label.platinum=(P)
 player.label.allstar_award=(A)
+player.label.injured=(I)
+
+injury.label.duration=Duration
 
 awards.label.award=Award
 awards.label.player=Player
