Implemented awards and all stars

--- a/src/natc/resource/natc.properties
+++ b/src/natc/resource/natc.properties
@@ -27,6 +27,7 @@ games.label.preseason=Preseason
 games.label.regseason=Regular Season
 games.label.postseason=Postseason
 games.label.injuries=Injuries
+games.label.allstars= All Stars
 
 team.label.area=Area
 team.label.rating=Rating
@@ -89,6 +90,7 @@ team.label.division_champ=Division Champion
 team.label.conference_champ=Conference Champion
 team.label.natc_champ=NATC Champion
 team.label.games=Games
+team.label.game=Game
 team.label.time_per_game=Time/Game
 team.label.rookie=(R)
 team.label.history=History
@@ -98,6 +100,8 @@ team.label.gold=(G)
 team.label.platinum=(P)
 team.label.allstar=(A)
 team.label.injured=(I)
+team.label.injuries=Injuries
+team.label.duration=Duration
 
 manager.label.area=Area
 manager.label.rating=Rating
@@ -119,6 +123,10 @@ manager.label.avg_top=Avg_Top
 manager.label.score=Score
 manager.label.eff=Efficiency
 manager.label.ps_eff=PS Eff.
+manager.label.awards=Awards
+manager.label.as_player=Career As Player
+manager.label.allstar_award=(A)
+manager.label.moty=(M)
 
 player.label.name=Name
 player.label.team=Team
@@ -137,6 +145,7 @@ player.label.penalty_shot=Penalty Shot
 player.label.penalty_offense=Penalty Offense
 player.label.penalty_defense=Penalty Defense
 player.label.stats=Stats
+player.label.injuries=Injuries
 player.label.preseason=Preseason
 player.label.regseason=Reg. Season
 player.label.postseason=Postseason
@@ -145,6 +154,8 @@ player.label.type=Type
 player.label.poss=Poss.
 player.label.time=Game Time
 player.label.games=Games
+player.label.game=Game
+player.label.duration=Duration
 player.label.time_per_game=Time/Game
 player.label.attempts=Attempts
 player.label.goals=Goals
@@ -165,7 +176,11 @@ player.label.silver=(S)
 player.label.gold=(G)
 player.label.platinum=(P)
 player.label.allstar_award=(A)
+player.label.rookie=(R)
 player.label.injured=(I)
+player.label.returns=Returns:
+player.label.at=at
+player.label.vs=vs
 
 injury.label.duration=Duration
 
@@ -175,6 +190,7 @@ awards.label.team=Team
 awards.label.manager=Manager
 awards.label.conference=Conference
 awards.label.division=Division
+awards.label.moty=Manager of the Year
 awards.label.platinum=Platinum
 awards.label.gold=Gold
 awards.label.silver=Silver
