Implemented better manager AI

--- a/src/natc/resource/natc.properties
+++ b/src/natc/resource/natc.properties
@@ -102,6 +102,7 @@ team.label.allstar=(A)
 team.label.injured=(I)
 team.label.injuries=Injuries
 team.label.duration=Duration
+team.label.date=Date
 
 manager.label.area=Area
 manager.label.rating=Rating
@@ -201,6 +202,9 @@ ofs.label.fired=Fired Managers
 ofs.label.hired=Hired Managers
 ofs.label.manager=Manager
 ofs.label.team=Team
+ofs.label.seasons=Seasons
+ofs.label.win_pct=Win Pct.
+ofs.label.na=n/a
 
 draft.label.pick=Pick
 draft.label.player=Player
