Added games started and implemented sortable tables

--- a/src/natc/resource/natc.properties
+++ b/src/natc/resource/natc.properties
@@ -103,6 +103,8 @@ team.label.injured=(I)
 team.label.injuries=Injuries
 team.label.duration=Duration
 team.label.date=Date
+team.label.opponent=Opponent
+team.label.starts=Starts
 
 manager.label.area=Area
 manager.label.rating=Rating
@@ -182,6 +184,13 @@ player.label.injured=(I)
 player.label.returns=Returns:
 player.label.at=at
 player.label.vs=vs
+player.label.opponent=Opponent
+player.label.date=Date
+player.label.retired=Retired
+player.label.freeagent=Free Agent
+player.label.draft=Drafted
+player.label.started=(S)
+player.label.starts=Starts
 
 injury.label.duration=Duration
 
