Added season stages workflow

--- a/src/natc/resource/natc.properties
+++ b/src/natc/resource/natc.properties
@@ -211,6 +211,8 @@ ofs.label.fired=Fired Managers
 ofs.label.hired=Hired Managers
 ofs.label.manager=Manager
 ofs.label.team=Team
+ofs.label.ratings=Ratings
+ofs.label.style=Style
 ofs.label.seasons=Seasons
 ofs.label.win_pct=Win Pct.
 ofs.label.na=n/a
@@ -234,17 +236,33 @@ releases.label.seasons=Seasons Played
 releases.label.pick=Draft Pick
 releases.label.veterans=Released Veterans
 releases.label.rookies=Released Rookies
+releases.label.rookie=(R)
+
+freeagent.label.status=Status
+freeagent.label.player=Player
+freeagent.label.from=From
+freeagent.label.age=Age
+freeagent.label.seasons=Seasons
+freeagent.action.released=Released
+freeagent.action.signed=Signed
 
 resigned.label.resigned=Re-Signed Players
 resigned.label.player=Player
 resigned.label.released=Released By
 resigned.label.signed=Signed By
 
+retired.label.notable=Other Notables
 retired.label.retired=Retired Players
 retired.label.player=Player
 retired.label.age=Age
 retired.label.seasons=Seasons Played
 retired.label.rookies=Abandoned Rookies
+retired.label.goals=Goals
+retired.label.assists=Assists
+retired.label.stops=Stops
+retired.label.steals=Steals
+retired.label.psm=Psm
+retired.label.points=Points
 
 games.label.next=Next
 
