Added manager awards and all stars

--- a/src/natc/resource/natc.properties
+++ b/src/natc/resource/natc.properties
@@ -7,6 +7,7 @@ title.manager=Manager
 title.stats=Stats
 title.teams=Teams
 title.team=Team
+title.champs=Champs
 
 conference.williamson=Williamson
 conference.fernandez=Fernandez
@@ -28,6 +29,11 @@ games.label.regseason=Regular Season
 games.label.postseason=Postseason
 games.label.injuries=Injuries
 games.label.allstars= All Stars
+games.label.champs=NATC Champions
+games.label.asgchamps=Allstar Champions
+games.label.home=Home
+games.label.road=Road
+games.label.score=Score
 
 team.label.area=Area
 team.label.rating=Rating
@@ -105,6 +111,8 @@ team.label.duration=Duration
 team.label.date=Date
 team.label.opponent=Opponent
 team.label.starts=Starts
+team.label.points=Points
+team.label.team=Team
 
 manager.label.area=Area
 manager.label.rating=Rating
@@ -133,7 +141,10 @@ manager.label.moty=(M)
 
 player.label.name=Name
 player.label.team=Team
-player.label.history=History
+player.label.prehistory=Preseason History
+player.label.reghistory=Regular Season History
+player.label.posthistory=Postseason History
+player.label.ashistory=Allstar History
 player.label.area=Area
 player.label.rating=Rating
 player.label.scoring=Scoring
@@ -149,6 +160,7 @@ player.label.penalty_offense=Penalty Offense
 player.label.penalty_defense=Penalty Defense
 player.label.stats=Stats
 player.label.injuries=Injuries
+player.label.injury_history=Injury History
 player.label.preseason=Preseason
 player.label.regseason=Reg. Season
 player.label.postseason=Postseason
@@ -191,6 +203,7 @@ player.label.freeagent=Free Agent
 player.label.draft=Drafted
 player.label.started=(S)
 player.label.starts=Starts
+player.label.points=Points
 
 injury.label.duration=Duration
 
@@ -205,6 +218,16 @@ awards.label.platinum=Platinum
 awards.label.gold=Gold
 awards.label.silver=Silver
 awards.label.rookie=(R)
+awards.label.injured=(I)
+awards.label.points=Points
+awards.label.goals=Goals
+awards.label.assists=Assists
+awards.label.stops=Stops
+awards.label.steals=Steals
+awards.label.psm=PSM
+awards.label.record=Record
+awards.label.efficiency=Efficiency
+awards.label.ps_eff=PS Eff.
 
 ofs.label.retired=Retired Managers
 ofs.label.fired=Fired Managers
@@ -216,6 +239,8 @@ ofs.label.style=Style
 ofs.label.seasons=Seasons
 ofs.label.win_pct=Win Pct.
 ofs.label.na=n/a
+ofs.label.moty=(M)
+ofs.label.allstar=(A)
 
 draft.label.pick=Pick
 draft.label.player=Player
@@ -241,6 +266,7 @@ releases.label.rookie=(R)
 freeagent.label.status=Status
 freeagent.label.player=Player
 freeagent.label.from=From
+freeagent.label.rating=Rating
 freeagent.label.age=Age
 freeagent.label.seasons=Seasons
 freeagent.action.released=Released
@@ -263,6 +289,10 @@ retired.label.stops=Stops
 retired.label.steals=Steals
 retired.label.psm=Psm
 retired.label.points=Points
+retired.label.platinum=(P)
+retired.label.gold=(G)
+retired.label.silver=(S)
+retired.label.allstar=(A)
 
 games.label.next=Next
 
