Various visual and UX tweaks and minor refactoring

--- a/src/natc/resource/natc.properties
+++ b/src/natc/resource/natc.properties
@@ -229,18 +229,23 @@ awards.label.record=Record
 awards.label.efficiency=Efficiency
 awards.label.ps_eff=PS Eff.
 
+ofs.label.notable=Other Notable
 ofs.label.retired=Retired Managers
 ofs.label.fired=Fired Managers
 ofs.label.hired=Hired Managers
 ofs.label.manager=Manager
 ofs.label.team=Team
 ofs.label.ratings=Ratings
+ofs.label.status=Status
 ofs.label.style=Style
 ofs.label.seasons=Seasons
 ofs.label.win_pct=Win Pct.
 ofs.label.na=n/a
 ofs.label.moty=(M)
 ofs.label.allstar=(A)
+ofs.action.retired=Retired
+ofs.action.fired=Fired
+ofs.action.hired=Hired
 
 draft.label.pick=Pick
 draft.label.player=Player
