--- a/src/natc/resource/natc.properties
+++ b/src/natc/resource/natc.properties
@@ -234,7 +234,7 @@ ofs.label.retired=Retired Managers
 ofs.label.fired=Fired Managers
 ofs.label.hired=Hired Managers
 ofs.label.manager=Manager
-ofs.label.team=Team
+ofs.label.from=From
 ofs.label.ratings=Ratings
 ofs.label.status=Status
 ofs.label.style=Style
@@ -282,11 +282,13 @@ resigned.label.player=Player
 resigned.label.released=Released By
 resigned.label.signed=Signed By
 
+retired.label.status=Status
 retired.label.notable=Other Notables
 retired.label.retired=Retired Players
 retired.label.player=Player
+retired.label.from=From
 retired.label.age=Age
-retired.label.seasons=Seasons Played
+retired.label.seasons=Seasons
 retired.label.rookies=Abandoned Rookies
 retired.label.goals=Goals
 retired.label.assists=Assists
@@ -298,6 +300,9 @@ retired.label.platinum=(P)
 retired.label.gold=(G)
 retired.label.silver=(S)
 retired.label.allstar=(A)
+retired.action.retired=Retired
+retired.action.released=Released
+retired.action.signed=Signed
 
 games.label.next=Next
 
