--- a/src/natc/resource/natc.properties
+++ b/src/natc/resource/natc.properties
@@ -332,6 +332,9 @@ stats.label.year=Year
 stats.label.opponent=Opponent
 stats.label.seasons=Seasons
 stats.label.unused=
+stats.option.playthisseason=Top Players This Season
+stats.option.teamoffthisseason=Top Offensive Teams This Season
+stats.option.teamdefthisseason=Top Defensive Teams This Season
 stats.option.playbygame=Top Players By Game
 stats.option.playbyseason=Top Players By Season
 stats.option.playbycareer=Top Players By Career
