Implemented page to watch games play in realtime

--- a/src/natc/resource/natc.properties
+++ b/src/natc/resource/natc.properties
@@ -35,6 +35,14 @@ games.label.home=Home
 games.label.road=Road
 games.label.score=Score
 
+game.label.period1=P1
+game.label.period2=P2
+game.label.period3=P3
+game.label.period4=P4
+game.label.period5=P5
+game.label.overtime=OT
+game.label.score=Score
+
 team.label.area=Area
 team.label.rating=Rating
 team.label.offense=Offense
