Added time zones for home games and other tweaks to real time game play

--- a/src/natc/resource/natc.properties
+++ b/src/natc/resource/natc.properties
@@ -23,6 +23,7 @@ games.option.month=Month
 games.option.year=Year
 games.option.next=Next
 
+games.label.final_indicator=F
 games.label.ot_indicator=OT
 games.label.preseason=Preseason
 games.label.regseason=Regular Season
@@ -42,6 +43,7 @@ game.label.period4=P4
 game.label.period5=P5
 game.label.overtime=OT
 game.label.score=Score
+game.label.est_start=EST
 
 team.label.area=Area
 team.label.rating=Rating
