--- a/src/natc/resource/natc.properties
+++ b/src/natc/resource/natc.properties
@@ -3,6 +3,7 @@ title.games=Games
 title.news=News
 title.players=Players
 title.player=Player
+title.playoffs=Playoffs
 title.manager=Manager
 title.stats=Stats
 title.teams=Teams
